--- a/root.html
+++ b/root.html
@@ -6,4 +6,26 @@
         <link rel="stylesheet" href="root.css">
         <script src="root.js"></script>
     </head>
+    <body>
+        <header>
+            Practice WebGL  
+        </header>
+        <main>
+            <div class="container">
+                <section class="python">
+                    <div class="content">
+                        <p><span class="ptitle">Python WebScraping</span></p>
+                        Please Enter URI
+                        <form action="" method="get" class="uri_input">
+                            <input type="url" name="URI" id="URI">
+                        </form>
+                    </div>
+                </section>
+            </div>
+        </main>
+
+        <footer>
+
+        </footer>
+    </body>
 </html>
