--- a/root.html
+++ b/root.html
@@ -21,7 +21,10 @@
                             <input type="url" name="URI" id="URI">
                         </form>  -->
                         <p><input type="url" name="URI" id="URI"><button type="button" id="button">send</button></p>
-                        <textarea name="" id="result" cols="30" rows="10"></textarea>
+                        <!-- <textarea name="" id="result" cols="30" rows="10"></textarea> -->
+                        <canvas id="result">
+
+                        </canvas>
                     </div>
                 </section>
             </div>
@@ -32,5 +35,6 @@
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="root.js"></script>
+        <script src="webgl.js"></script>
     </body>
 </html>
