--- a/root.html
+++ b/root.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="root.css">
+        <link rel="stylesheet" href="css/root.css">
     </head>
     <body>
         <header>
@@ -34,7 +34,20 @@
 
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script src="root.js"></script>
-        <script src="webgl.js"></script>
+        <script src="js/root.js"></script>
+        <script src="js/webgl.js"></script>
+        <script id="vs" type="x-shader/x-vertex" src="">
+            attribute vec3 position;
+            uniform   mat4 mvpMatrix;
+            
+            void main(void){
+                gl_Position = mvpMatrix * vec4(position, 1.0);
+            }
+        </script>
+        <script id="fs" type="x-shader/x-fragment">
+            void main(void){
+                gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
+            }
+        </script>
     </body>
 </html>
